--- a/src/assets/sass/variables/_variables.sizes.scss
+++ b/src/assets/sass/variables/_variables.sizes.scss
@@ -3,3 +3,8 @@ $tablet: 1024px;
 $smallTablet: 700px;
 $phone: 600px;
 $smallPhone: 400px;
+
+//New Figma screens:
+//Desktop: 1024px
+//Tablet: 768px
+//Phone: 480px
