--- a/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
@@ -6,7 +6,7 @@
 @use "@assets/sass/_utils.functions.scss" as f;
 
 .sourcesWrapper {
-    @include wr.main-page-block-wrapper();
+    @include wr.block-wrapper-for-slick-slider();
 
     .sourcesContainer {
         @include mut.sizedImportant(100%, 100%);
@@ -47,13 +47,13 @@
             @include mut.flex-centered($gap: 30px);
             width: unset !important;
             border: none;
-            border: 1px solid transparent;          
+            border: 1px solid transparent;
             .slick-slide {
                 @include vnd.vendored(transition, 'all .5s ease');
                 .left, .right{
                     width: 0;
                 }
-    
+
                 &:hover {
                     scale: 101%;
                     filter: contrast(135%);
