--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -305,12 +305,7 @@
   $gap-sum: ($rows - 1) * $gap;
 
   display: grid;
-  gap: f.pxToRem($gap);
   justify-content: center;
   grid-template-columns: repeat($cols, 1fr);
-  grid-template-rows: repeat($rows, f.pxToRem(calc((536px - $gap-sum)/$rows)));
-}
-@mixin list-styles($type) {
-  list-style-type: $type;
-  padding-inline-start: revert;
+  grid-template-rows: repeat($rows, 1fr);
 }
