removed  "СТРІТКОД" caption on screen size below 340px

--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
@@ -118,3 +118,11 @@ $loadImg: '@assets/images/catalog/loading.webp';
         }
     }
 }
+
+@media screen and (max-width: 340px) {
+    .headingFlexItem{
+        .streetcodeCatalogCaption {
+            display: none;
+        }
+    }
+}
