--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -309,3 +309,8 @@
   grid-template-columns: repeat($cols, 1fr);
   grid-template-rows: repeat($rows, 1fr);
 }
+
+@mixin list-styles($type) {
+  list-style-type: $type;
+  padding-inline-start: revert;
+}
