--- a/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeToFour/OneAndTwoAndThreeToFourSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeToFour/OneAndTwoAndThreeToFourSlide.styles.scss
@@ -1,12 +1,18 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as *;
+@use '@sass/variables/variables.sizes' as s;
 
 .OneAndTwoAndThreeToFourSlide{
   @include mut.art-slide-grid($rows: 2);
   @include mut.images-grid-area($to:3);
 
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: repeat(2, pxToRem(s.$art-gallery-img-size));
   grid-template-areas:
             "img1 img3"
             "img2 img3";
+  
+  @media screen and (max-width: 680px) {
+    grid-template-columns: repeat(2, pxToRem(s.$art-gallery-img-size-mobile));
+    width: pxToRem(s.$art-gallery-img-size-mobile * 2 + s.$art-gallery-gap-mobile);
+  }
 }
