--- a/src/app/common/components/ArtGallery/components/OneToFourAndFiveAndSixSlide/OneToFourAndFiveAndSixSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToFourAndFiveAndSixSlide/OneToFourAndFiveAndSixSlide.styles.scss
@@ -2,7 +2,7 @@
 @use "@sass/_utils.functions.scss" as *;
 
 .OneToFourAndFiveAndSixSlide{
-  @include mut.art-slide-grid($rows: 2);
+  @include mut.art-slide-grid($rows: 2, $cols: 2);
   @include mut.images-grid-area($to:3);
 
   grid-template-columns: 2fr 1fr;
