--- a/src/features/AdminPage/TagsPage/TagsMainPage.style.scss
+++ b/src/features/AdminPage/TagsPage/TagsMainPage.style.scss
@@ -2,32 +2,39 @@
 @use "@sass/variables/_variables.fonts.scss" as ft;
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/_utils.functions.scss" as f;
-$articlesImg: "@assets/images/sources/Articles.webp";
 
- .MainForFansContainer {
-     @include mut.sized(80%);
+.tags-page{
+    @include mut.admin-page-base-layout();
+    margin-top: 0;
 
-      margin-top: f.pxToRem(100px);
-      margin-right: f.pxToRem(50px);
-      float: right;
-      h1 {
-         color: white;
-         font-weight: 500;
-       }
- }
-.ForFansPageContainer {
-  padding-top: 6.25rem;
-  display: flex;
-  gap: 0.625rem;
-}
-.forFansPage{
-  max-width: 100%;
-  width: 80vw;
-}
-.sourceActions {
-  display: flex;
-  justify-content: space-around;
-  gap: 5px;
-  margin-left: 5px;
-  z-index: 2;
+    .container-justify-end{
+        display: flex;
+        justify-content: end;
+    }
+    .tags-page-container{
+        @include mut.sized(100%);
+
+        .tags-table-logo{
+            max-width: 90%;
+            height: f.pxToRem(40px);
+            margin: 0;
+            padding: 0
+        }
+        .tag-page-actions{
+            display: flex;
+            gap: f.pxToRem(30px);
+        }
+        .tag-links{
+            @include mut.flexed(row, start,space-between, wrap, 4px);
+        }
+        .tags-table{
+            margin-top: f.pxToRem(20px);
+        }
+        .tag-table-item-name{
+            @include mut.flexed(row, start,flex-start, wrap, 4px);
+        }
+        .site-link{
+            word-break: break-all
+        }
+    }
 }
