streetcode art galery size fix

--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -306,6 +306,7 @@
 
   display: grid;
   justify-content: center;
+  align-content: center;
   grid-template-columns: repeat($cols, 1fr);
   grid-template-rows: repeat($rows, 1fr);
 }
