--- a/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
+++ b/src/features/AboutUsPage/TeamMembers/TeamMembers.component.scss
@@ -42,8 +42,9 @@
 .slider-arrow {
     min-width: 44px;
     transition: .5s;
+    filter: c.$active-arrow-filter-color;
     &:hover {
-      filter: brightness(50%);
+      filter: c.$selected-arrow-filter-color;
     }
 }
 
